--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/uuid": "^8.3.4",
